--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>1923 Cumhuriyet Konferansı | Samsun Rotaract </title>
-  <link rel="stylesheet" href="/index.css">
+  <link rel="stylesheet" href="./index.css">
   <script src="https://kit.fontawesome.com/75a9b9d92e.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
     <div class="logo">
-      <img src="/images/logo.png">
+      <img src="./images/logo.png">
       </div>      
     <nav>
       <a href="./index.html">Ana Sayfa</a>
@@ -23,7 +23,7 @@
   <main>
     <div class="icerik-bolmesi">
       <div class="baslik">
-        <img src="/images/kapak.jpg" alt="Başlık Resmi" class="baslik-resmi"> 
+        <img src="./images/kapak.jpg" alt="Başlık Resmi" class="baslik-resmi"> 
         <h1>1923 Cumhuriyet Konferansı</h1>
         <h2>10-12 Mayıs 2024</h2>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
