--- a/kayitol.html
+++ b/kayitol.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>1923 Cumhuriyet Konferansı | Samsun Rotaract</title>
-  <link rel="stylesheet" href="/takımlar.css">
+  <link rel="stylesheet" href="./takımlar.css">
   <script src="https://kit.fontawesome.com/75a9b9d92e.js" crossorigin="anonymous"></script>
 </head>
 <body>
