--- a/konferans.html
+++ b/konferans.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="/images/logo.png">
+      <img src="./images/logo.png">
       </div>      
     <nav>
       <a href="./index.html">Ana Sayfa</a>
@@ -33,18 +33,18 @@
         <h2>Merhaba Değerli Dostlarımız,</h2>
         <div class="uyeler">
           <div class="uye">
-            <img src="/images/kisi1.jpg" alt="Kişi 1">
+            <img src="./images/kisi1.jpg" alt="Kişi 1">
             <h3>Oktay ÇELEN</h3>
             <p>Uluslararası Rotary 2430. Bölge 2023-2024 Dönemi BÖLGE ROTARACT TEMSİLCİSİ</p>
           </div>
           <div class="uye">
-            <img src="/images/kisi2.jpg" alt="Kişi 2">
+            <img src="./images/kisi2.jpg" alt="Kişi 2">
             <h3>Deniz ZEREN</h3>
             <p>Samsun Atakum Rotaract Kulübü
                 2023-2024 Dönem Başkanı</p>
           </div>
           <div class="uye">
-            <img src="/images/kisi3.jpg" alt="Kişi 3">
+            <img src="./images/kisi3.jpg" alt="Kişi 3">
             <h3>Buğra TAVLI</h3>
             <p>Konferans Ana Komite Başkanı</p>
           </div>
