--- a/otel.html
+++ b/otel.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="/images/logo.png">
+      <img src="./images/logo.png">
       </div>       
     <nav>
       <a href="./index.html">Ana Sayfa</a>
@@ -27,11 +27,11 @@
       <h1>Limak Limra Hotel</h1>
       <h2>10-12 Mayıs 2024</h2>
       <div class="image-gallery">
-          <img src="/images/p1.jpeg" alt="Hotel Image 1">
-          <img src="/images/p2.jpeg" alt="Hotel Image 2">
-          <img src="/images/p3.jpeg" alt="Hotel Image 3">
-          <img src="/images/p4.jpeg" alt="Hotel Image 4">
-          <img src="/images/p5.jpeg" alt="Hotel Image 5">
+          <img src="./images/p1.jpeg" alt="Hotel Image 1">
+          <img src="./images/p2.jpeg" alt="Hotel Image 2">
+          <img src="./images/p3.jpeg" alt="Hotel Image 3">
+          <img src="./images/p4.jpeg" alt="Hotel Image 4">
+          <img src="./images/p5.jpeg" alt="Hotel Image 5">
           </div>
   </section>
     <section class="otel-bilgileri">
