--- a/takımlar.html
+++ b/takımlar.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="/images/logo.png">
+      <img src="./images/logo.png">
       </div>      
     <nav>
       <a href="./index.html">Ana Sayfa</a>
