--- a/konferans.html
+++ b/konferans.html
@@ -38,13 +38,13 @@
             <p>Uluslararası Rotary 2430. Bölge 2023-2024 Dönemi BÖLGE ROTARACT TEMSİLCİSİ</p>
           </div>
           <div class="uye">
-            <img src="./images/kisi2.jpg" alt="Kişi 2">
+            <img src="/images/kisi3.jpg" alt="Kişi 2">
             <h3>Deniz ZEREN</h3>
             <p>Samsun Atakum Rotaract Kulübü
                 2023-2024 Dönem Başkanı</p>
           </div>
           <div class="uye">
-            <img src="./images/kisi3.jpg" alt="Kişi 3">
+            <img src="/images/kisi3.jpg" alt="Kişi 3">
             <h3>Buğra TAVLI</h3>
             <p>Konferans Ana Komite Başkanı</p>
           </div>
