--- a/konferans.html
+++ b/konferans.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>1923 Cumhuriyet Konferansı | Samsun Rotaract </title>
+  <title>1923 Cumhuriyet Konferansı | Samsun Atakum Rotaract </title>
+  <link rel="icon" type="image/x-icon" href="./images/favicon.png">
   <link rel="stylesheet" href="./konferans.css">
   <script src="https://kit.fontawesome.com/75a9b9d92e.js" crossorigin="anonymous"></script>
 </head>
