--- a/otel.html
+++ b/otel.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>1923 Cumhuriyet Konferansı | Samsun Rotaract </title>
+  <title>1923 Cumhuriyet Konferansı | Samsun Atakum Rotaract </title>
+  <link rel="icon" type="image/x-icon" href="./images/favicon.png">
   <link rel="stylesheet" href="./otel.css">
   <script src="https://kit.fontawesome.com/75a9b9d92e.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
