--- a/index.html
+++ b/index.html
@@ -33,10 +33,8 @@
     </main>
     <footer>
       <div class="sosyal-medya">
-        <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
-        <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
-        <a href="https://x.com/"><i class="fa-brands fa-x-twitter"></i></i></a>
+        <a href="https://www.instagram.com/konferans35"><i class="fab fa-instagram"></i></a>
+        <a href="mailto:35.konferans@gmail.com"><i class="fa-brands fa-envelope"></i></i></a>
       </div>
       <p class="telif-hakkı">© 2024 Demir Bülbüloğlu - Tüm Hakları Saklıdır.</p>
     </footer>
