--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <footer>
       <div class="sosyal-medya">
         <a href="https://www.instagram.com/konferans35"><i class="fab fa-instagram"></i></a>
-        <a href="mailto:35.konferans@gmail.com"><i class="fa-brands fa-envelope"></i></i></a>
+        <a href="mailto:35.konferans@gmail.com"><i class="fa-solid fa-envelope"></i></a>
       </div>
       <p class="telif-hakkı">© 2024 Demir Bülbüloğlu - Tüm Hakları Saklıdır.</p>
     </footer>
