--- a/takımlar.html
+++ b/takımlar.html
@@ -26,14 +26,12 @@
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeFc07bduTW13szzGEHqQP_bptg-6TmXYG1OsqCJ5642CZYow/viewform?embedded=true" width="640" height="1523" frameborder="0" marginheight="0" marginwidth="0">Yükleniyor…</iframe>
       </div>
    </main>
-    <footer>
-      <div class="sosyal-medya">
-        <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
-        <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
-        <a href="https://x.com/"><i class="fa-brands fa-x-twitter"></i></i></a>
-      </div>
-      <p class="telif-hakkı">© 2024 Demir Bülbüloğlu - Tüm Hakları Saklıdır.</p>
-    </footer>
+   <footer>
+    <div class="sosyal-medya">
+      <a href="https://www.instagram.com/konferans35"><i class="fab fa-instagram"></i></a>
+      <a href="mailto:35.konferans@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+    </div>
+    <p class="telif-hakkı">© 2024 Demir Bülbüloğlu - Tüm Hakları Saklıdır.</p>
+  </footer>
 </body>
 </html>
