--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <img src="./images/kapak.jpg" alt="Başlık Resmi" class="baslik-resmi"> 
         <h1>1923 Cumhuriyet Konferansı</h1>
         <h2>10-12 Mayıs 2024</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        <p>Samsun Atakum Rotaract Kulübü olarak Cumhuriyetimizin 100. yıl dönümünü ve 35. Rotaract Konferansı'nı bir araya getirerek unutulmaz bir deneyim sunmaya hazırlanıyoruz.<br> 1923 Cumhuriyet Konferansı’nda ödül geceleri, takım oyunları, konforlu konaklama ve eğlenceli partiler yer alacak. Hem konferansların bilgilendirici atmosferinden hem de partilerin eğlenceli ortamından yararlanmak isteyen bütün Rotaractör dostlarımızı ve misafirlerimizi konferansa bekliyoruz!<br> Detaylar için websitemizde gezinebilir, sosyal medya hesaplarımızdan iletişime geçebilirsiniz.</p>
       </div>
    </div>
     </main>
