--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <img src="./images/kapak.jpg" alt="Başlık Resmi" class="baslik-resmi"> 
         <h1>1923 CUMHURİYET KONFERANSI</h1>
         <h2>10-12 Mayıs 2024</h2>
-        <p>Samsun Atakum Rotaract Kulübü olarak Cumhuriyetimizin 100. yıl dönümünü ve 35. Rotaract Konferansı'nı bir araya getirerek unutulmaz bir deneyim sunmaya hazırlanıyoruz.<br> 1923 Cumhuriyet Konferansı’nda ödül geceleri, takım oyunları, konforlu konaklama ve eğlenceli partiler yer alacak. Hem konferansların bilgilendirici atmosferinden hem de partilerin eğlenceli ortamından yararlanmak isteyen bütün Rotaractör dostlarımızı ve misafirlerimizi konferansa bekliyoruz!<br> Detaylar için websitemizde gezinebilir, sosyal medya hesaplarımızdan iletişime geçebilirsiniz.</p>
+        <p>Samsun Atakum Rotaract Kulübü olarak Cumhuriyetimizin 100. yıl dönümünü ve 35. Rotaract Konferansını bir araya getirerek unutulmaz bir deneyim sunmaya hazırlanıyoruz.<br> 1923 Cumhuriyet Konferansı’nda ödül geceleri, takım oyunları, konforlu konaklama ve eğlenceli partiler yer alacak. Hem konferansların bilgilendirici atmosferinden hem de partilerin eğlenceli ortamından yararlanmak isteyen bütün Rotaractör dostlarımızı ve misafirlerimizi konferansa bekliyoruz!<br> Detaylar için websitemizde gezinebilir, sosyal medya hesaplarımızdan iletişime geçebilirsiniz.</p>
       </div>
    </div>
     </main>
