--- a/otel.html
+++ b/otel.html
@@ -20,6 +20,7 @@
       <a href="./konferans.html">Konferans</a>
       <a href="./takımlar.html">Takımlar</a>
       <a href="./otel.html">Otel</a>
+      <a href="./paketler.html">Paketler</a>
     </nav>
     <a href="./kayitol.html" class="kayit-ol">KAYIT OLUN</a>
   </header>
