--- a/kayitol.html
+++ b/kayitol.html
@@ -19,12 +19,18 @@
       <a href="./konferans.html">Konferans</a>
       <a href="./takımlar.html">Takımlar</a>
       <a href="./otel.html">Otel</a>
+      <a href="./paketler.html">Paketler</a>
     </nav>
     <a href="./kayitol.html" class="kayit-ol">KAYIT OLUN</a>
   </header>
-    <main>
-
-   </main>
+  <main>
+    <div class="form">
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdgAWA_2r4y7w74C-cmTnFPeKQOgtMQAB5nQumeFuIondn7UA/viewform?embedded=true" width="640" height="1199" frameborder="0" marginheight="0" marginwidth="0">Yükleniyor…</iframe>
+    </div>
+  
+    <button id="paket-sec" class="paket-sec-butonu">Paket Seçin</button>
+    <button id="paketleri-gor" class="paketleri-gor-butonu">Paketleri Gör</button>
+  </main>  
    <footer>
     <div class="sosyal-medya">
       <a href="https://www.instagram.com/konferans35"><i class="fab fa-instagram"></i></a>
@@ -32,5 +38,32 @@
     </div>
     <p class="telif-hakkı">© 2024 Demir Bülbüloğlu - Tüm Hakları Saklıdır.</p>
   </footer>
+
+<script>
+const form = document.querySelector('.form iframe');
+const paketSecButonu = document.getElementById('paket-sec');
+const paketleriGorButonu = document.getElementById('paketleri-gor');
+
+paketleriGorButonu.addEventListener('click', () => {
+  window.location.href = './paketler.html'; // Paketler sayfasının URL'si
+});
+
+form.addEventListener('load', () => {
+  // Google Form'un yüklenmesini bekle
+  const iframeDoc = form.contentDocument || form.contentWindow.document;
+  const successMessage = iframeDoc.querySelector(/* Başarı mesajının konumunu bulmak için Google Form'unuzu inceleyin */);
+
+  if (successMessage) {
+    // Form gönderilmişse butonu göster
+    paketSecButonu.style.display = 'block'; 
+  }
+});
+
+// Butona tıklandığında yönlendir
+paketSecButonu.addEventListener('click', () => {
+  window.location.href = 'https://www.paketsecimsayfasi.com'; // Paket seçim sayfasının URL'si
+});
+</script>
+
 </body>
 </html>
