--- a/kayitol.html
+++ b/kayitol.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>1923 Cumhuriyet Konferansı | Samsun Atakum Rotaract</title>
   <link rel="icon" type="image/x-icon" href="./images/favicon.png">
-  <link rel="stylesheet" href="./takımlar.css">
+  <link rel="stylesheet" href="./kayitol.css">
   <script src="https://kit.fontawesome.com/75a9b9d92e.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -61,7 +61,7 @@ form.addEventListener('load', () => {
 
 // Butona tıklandığında yönlendir
 paketSecButonu.addEventListener('click', () => {
-  window.location.href = 'https://www.paketsecimsayfasi.com'; // Paket seçim sayfasının URL'si
+  window.location.href = 'https://www.antalyaseminer.com'; // Paket seçim sayfasının URL'si
 });
 </script>
 
