--- a/kayitol.html
+++ b/kayitol.html
@@ -61,7 +61,7 @@ form.addEventListener('load', () => {
 
 // Butona tıklandığında yönlendir
 paketSecButonu.addEventListener('click', () => {
-  window.location.href = 'https://www.antalyaseminer.com'; // Paket seçim sayfasının URL'si
+  window.location.href = 'https://www.antalyaseminer.com/'; // Paket seçim sayfasının URL'si
 });
 </script>
 
