--- a/kayitol.html
+++ b/kayitol.html
@@ -26,26 +26,62 @@
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdgAWA_2r4y7w74C-cmTnFPeKQOgtMQAB5nQumeFuIondn7UA/viewform?embedded=true" width="640" height="1120" frameborder="0" marginheight="0" marginwidth="0">Yükleniyor…</iframe>
       </div>
     <button class="paketleri-gor">Paketleri Gör</button>
-    <button class="bilet-satin-al">Bilet Satın Al</button>
+    <!--<button class="bilet-satin-al">Bilet Satın Al</button>-->
+    <button class="odeme-bilgileri">Ödeme Bilgileri</button>
 
     <section class="paket-bolumu" id="paketler">
       <div class="paket-container">
           <h2>Paketlerimiz</h2>
   
           <div class="paket">
-              <h3>Paket 1</h3>
-              <p>Paket 1 içeriği</p>
-              <span class="fiyat">100 TL</span>
+              <h3>ANKARA PALACE</h3>
+              <p>1 Kişilik Oda - 2 Gece</p>
+              <span class="fiyat">Kişi Başı: 11.165₺</span>
           </div>
   
           <div class="paket">
-              <h3>Paket 2</h3>
-              <p>Paket 2 içeriği</p>
-              <span class="fiyat">150 TL</span>
+              <h3>PERA PALACE</h3>
+              <p>2 Kişilik Oda - 2 Gece</p>
+              <span class="fiyat">Kişi Başı: 7.805₺</span>
           </div>
+
+          <div class="paket">
+            <h3>SÜMER PALACE</h3>
+            <p>3 Kişilik Oda - 3 Gece</p>
+            <span class="fiyat">Kişi Başı: 7.525₺</span>
+        </div>
+
+        <div class="paket">
+          <h3>BANDIRMA</h3>
+          <p>2 Kişilik Oda - 1 Gece</p>
+          <span class="fiyat">Kişi Başı: 5.005₺</span>
+      </div>
+
+      <div class="paket">
+        <h3>BEYOĞLU</h3>
+        <p>1 Kişilik Oda - 1 Gece</p>
+        <span class="fiyat">Kişi Başı: 6.685₺</span>
+    </div>
+
+    <div class="paket">
+      <h3>DOLMABAHÇE</h3>
+      <p>3 Kişilik Oda - 1 Gece</p>
+      <span class="fiyat">Kişi Başı: 4.865₺</span>
+  </div>
   
           </div>
   </section>
+
+  <div id="odemeModal" class="modal">
+    <div class="modal-content">
+      <span class="close-button">&times;</span>
+      <h2>Ödeme Bilgileri</h2>
+      <p><strong>Banka Adı:</strong> Garanti Bankası</p>
+      <p><strong>Hesap Adı:</strong> Samsun Atakum Rotaract</p>
+      <p><strong>IBAN:</strong> TR65 0006 2000 1234 0000 6666 23</p>
+      <p><strong>Açıklama:</strong> 1923konferansı - ADINIZ SOYADINIZ</p>
+    </div>
+  </div>
 
 
  </main>
@@ -73,6 +109,28 @@
     paketleriGorButonu.addEventListener('click', function() {
     paketBolumu.style.display = 'block'; //Paketi görünür yap
     });
+
+    // Ödeme butonu seçimi
+let odemeBilgileriButonu = document.querySelector('.odeme-bilgileri');
+let odemeModali = document.getElementById('odemeModal');
+let closeButton = document.querySelector('.close-button');
+
+// Butona tıklandığında modalı göster 
+odemeBilgileriButonu.addEventListener('click', function() {
+  odemeModali.style.display = 'block';
+});
+
+// Kapat butonuna tıklandığında modalı gizle
+closeButton.addEventListener('click', function() {
+  odemeModali.style.display = 'none';
+});
+
+// Modalın dışında bir yere tıklandığında da kapanacaktır
+window.onclick = function(event) {
+  if (event.target == odemeModali) {
+    odemeModali.style.display = 'none';
+  }
+}
 
   </script>
 
