--- a/kayitol.html
+++ b/kayitol.html
@@ -25,9 +25,8 @@
       <div class="form">
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdgAWA_2r4y7w74C-cmTnFPeKQOgtMQAB5nQumeFuIondn7UA/viewform?embedded=true" width="640" height="1120" frameborder="0" marginheight="0" marginwidth="0">Yükleniyor…</iframe>
       </div>
-    <button class="paketleri-gor">Paketleri Gör</button>
-    <!--<button class="bilet-satin-al">Bilet Satın Al</button>-->
-    <button class="odeme-bilgileri">Ödeme Bilgileri</button>
+    <button class="butonlar paketleri-gor">Paketleri Gör</button>
+        <button class="butonlar odeme-bilgileri">Ödeme Bilgileri</button>
 
     <section class="paket-bolumu" id="paketler">
       <div class="paket-container">
@@ -76,7 +75,7 @@
     <div class="modal-content">
       <span class="close-button">&times;</span>
       <h2>Ödeme Bilgileri</h2>
-      <p><strong>Banka Adı:</strong> Garanti Bankası</p>
+     <p><strong>Banka Adı:</strong> Garanti Bankası</p>
       <p><strong>Hesap Adı:</strong> Samsun Atakum Rotaract</p>
       <p><strong>IBAN:</strong> TR65 0006 2000 1234 0000 6666 23</p>
       <p><strong>Açıklama:</strong> 1923konferansı - ADINIZ SOYADINIZ</p>
@@ -95,43 +94,34 @@
   </footer>
 
   <script>
-    let biletAlButonu = document.querySelector('.bilet-satin-al');
-    biletAlButonu.addEventListener('click', function() {
-        window.location.href = 'https://www.antalyaseminer.com'; 
-    });
-
-    let paketleriGorButonu = document.querySelector('.paketleri-gor');
+    // "butonlar" isimli bir sınıf oluşturarak her iki butonu da seçer.
+    let butonlar = document.querySelectorAll('.butonlar');
     let paketBolumu = document.getElementById('paketler');
+    let odemeModali = document.getElementById('odemeModal');
+    let closeButton = document.querySelector('.close-button');
 
-    // Varsayılan olarak paketi gizliyoruz
-    paketBolumu.style.display = 'none';
-
-    paketleriGorButonu.addEventListener('click', function() {
-    paketBolumu.style.display = 'block'; //Paketi görünür yap
+    // Paketleri Gör ve Ödeme Bilgileri butonlarına tıklama olaylarını ekler.
+    butonlar.forEach((buton) => {
+        buton.addEventListener('click', function() {
+            if (buton.classList.contains('paketleri-gor')) {
+                paketBolumu.style.display = 'block';
+              } else if (buton.classList.contains('odeme-bilgileri')) {
+                odemeModali.style.display = 'block';
+              }
+          });
     });
 
-    // Ödeme butonu seçimi
-let odemeBilgileriButonu = document.querySelector('.odeme-bilgileri');
-let odemeModali = document.getElementById('odemeModal');
-let closeButton = document.querySelector('.close-button');
+    // Kapat butonuna tıklandığında modalı gizler.
+    closeButton.addEventListener('click', function() {
+      odemeModali.style.display = 'none';
+    });
 
-// Butona tıklandığında modalı göster 
-odemeBilgileriButonu.addEventListener('click', function() {
-  odemeModali.style.display = 'block';
-});
-
-// Kapat butonuna tıklandığında modalı gizle
-closeButton.addEventListener('click', function() {
-  odemeModali.style.display = 'none';
-});
-
-// Modalın dışında bir yere tıklandığında da kapanacaktır
-window.onclick = function(event) {
-  if (event.target == odemeModali) {
-    odemeModali.style.display = 'none';
-  }
-}
-
+    // Modalın dışında bir yere tıklandığında da kapanacaktır.
+    window.onclick = function(event) {
+      if (event.target == odemeModali) {
+          odemeModali.style.display = 'none';
+      }
+    };
   </script>
 
 </body>
