--- a/kayitol.html
+++ b/kayitol.html
@@ -79,15 +79,15 @@
         <div class="modal-icerik">
           <span class="kapat">&times;</span>
           <h2>Ödeme Bilgileri</h2>
-          <p>Banka Adı: ...</p>
-          <p>Hesap Adı: ...</p>
-          <p>IBAN: ...</p>
-          <p>Açıklama: ...</p>
+          <p>Banka Adı: AKBANK</p>
+          <p>Hesap Adı: Atakum Rotaract Kulübü Derneği</p>
+          <p>IBAN: TR28 0004 6006 2188 8000 1786 88</p>
+          <p>Açıklama: Kulüp Adı-BAĞIŞ</p>
         </div>
       </div>
     </section>
   </main>
-
+  
   <footer>
     <div class="sosyal-medya">
       <a href="https://www.instagram.com/konferans35"><i class="fab fa-instagram"></i></a>
